--- a/index.css
+++ b/index.css
@@ -105,20 +105,19 @@ body {
   }
 
   .enemy {
-    
     height: 576px;
     width: 558px;
     position: absolute;
     top: 26%;
     left: 59%;
-    z-index: 4;
+    z-index: 5;
     overflow: hidden;
-   animation: danger 3s infinite linear;
+   /* animation: danger 3s infinite linear; */
   }
   .enemy__spritesheet{
     height: 576px;
     width: 3456px;
-    z-index: 4;
+    z-index: 5;
     animation: moveEnemySpritesheet 1s steps(6) infinite;
   }
 
@@ -141,6 +140,23 @@ body {
       }  
      } 
 
+     @media only screen and (max-width: 2000px) {
+      .welcome{
+        justify-content: center;
+        top: 10%;
+           font-size: 2em;
+       }
+       .start {
+         top: 50; 
+         left: 50;
+         padding: 20px;
+         font-size: 200px;
+       }
+       .guyLeft{
+        top: 25%; 
+        left: 2%;
+       }
+    }
 
       @media only screen and (max-width: 1920px) { 
       * {
@@ -149,431 +165,58 @@ body {
       }
       
       body {
-        height: 100vh;
-        width: 100vw;
-        font-family: 'VT323', monospace;
           font-size: 50px;
-          background-color: rgba(14, 14, 49, 0.733);
-          color: #ddbf14;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-      }
-      .background {
-        height: 100vh;
-        width: 100vw;
-        z-index: -1;
-      }
-      .clouds {
-        position:absolute;
-        height: 100vh;
-        width: 100vw;
-        z-index: 0;
-      }
-      .bg1 {
-        position: absolute;
-        height: 100vh;
-        width: 100vw;
-        z-index: 1;
-      }
-      .bg2 {
-        position: absolute;
-        height: 100vh;
-        width: 100vw;
-        z-index: 2;
-      }
-      .bg3 {
-        position: absolute;
-        height: 100vh;
-        width: 100vw;
-        z-index: 3;
       }
       .welcome{
-        display: flex;
-        position: absolute;
-       justify-content: center;
-       top: 10%;
-         /* width: 100vw;
-        height: 100vh;  */
-           -webkit-text-stroke: 1px black;
-          z-index: 4;
-          font-size: 3em;
-          margin: 0;
-          padding: 0;
-          margin-block-start: 0;
-          margin-block-end: 0;
-          margin-inline-start: 0;
-          margin-inline-end: 0;
+      top: 10%;
+      font-size: 3em;
       }
-      
-      
-      
       .start {
-        position: absolute;
         top: 50; 
         left: 50;
         padding: 20px;
-          font-family: 'VT323', monospace;
           font-size: 150px;
-          background-color: #f21e31;
-          color: #ddbf14;
           font-style: normal;
           font-weight: normal;
-          border: 6px solid black;
-          border-radius: 30px;
-          box-shadow: 0px 60px 60px rgba(0, 0, 0, 0.25);
-          -webkit-text-stroke: 3px black;
-          z-index: 4;
       }
-      
-      .pixelart {
-          image-rendering: pixelated;
-        }
-      
       .guyLeft {
-        display: flex;
-        height: 300px;  
-        width: 405px;
-          overflow: hidden;
-          position: absolute;
           top: 30%; 
-          left: 15%;
-          z-index: 4;
+          left: 2%;
         }
-        
-        .guyLeft__spritesheet {
-          height: 300px;
-          width: 1620px;
-          z-index: 4;
-          animation: moveSpritesheet 1s steps(4) infinite;
-        }
-      
         .enemy {
-          display: flex;
-          height: 288px;
-          width: 279px;
-          position: absolute;
-          top: 33%;
-          left: 65%;
-          z-index: 8;
-          overflow: hidden;
-         animation: danger 3s infinite linear;
-        }
-        .enemy__spritesheet{
-          height: 288px;
-          width: 3456px;
-          z-index: 8;
-          animation: moveEnemySpritesheet 1s steps(6) infinite;
-        }
-      
-        @keyframes moveEnemySpritesheet {
-          from {
-            transform: translate3d(0px,0,0)
-          }
-          to {
-        transform: translate3d(-100%,0,0);
-          }
-        }
-      
-            @keyframes moveSpritesheet {
-              from {
-                transform: translate3d(0px, 0, 0);
-              }
-              to {
-                transform: translate3d(-100%, 0, 0);
-              }
-            }  
-           }  
 
-           
+          top: 33%;
+          left: 52%;
+          z-index: 5;
+        }
+
+           }  
            @media only screen and (max-width: 1366px) { 
-            * {
-            margin: 0;
-            padding: 0;
-            }
-            
+          
             body {
-              height: 100vh;
-              width: 100vw;
-              font-family: 'VT323', monospace;
                 font-size: 50px;
-                background-color: rgba(14, 14, 49, 0.733);
-                color: #ddbf14;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-            }
-            .background {
-              height: 100vh;
-              width: 100vw;
-              z-index: -1;
-            }
-            .clouds {
-              position:absolute;
-              height: 100vh;
-              width: 100vw;
-              z-index: 0;
-            }
-            .bg1 {
-              position: absolute;
-              height: 100vh;
-              width: 100vw;
-              z-index: 1;
-            }
-            .bg2 {
-              position: absolute;
-              height: 100vh;
-              width: 100vw;
-              z-index: 2;
-            }
-            .bg3 {
-              position: absolute;
-              height: 100vh;
-              width: 100vw;
-              z-index: 3;
             }
             .welcome{
-              display: flex;
-              position: absolute;
              justify-content: center;
              top: 10%;
-               /* width: 100vw;
-              height: 100vh;  */
-                 -webkit-text-stroke: 1px black;
-                z-index: 4;
                 font-size: 1.5em;
-                margin: 0;
-                padding: 0;
-                margin-block-start: 0;
-                margin-block-end: 0;
-                margin-inline-start: 0;
-                margin-inline-end: 0;
             }
-            
-            
-            
+
             .start {
               position: absolute;
               top: 50; 
               left: 50;
               padding: 20px;
-                font-family: 'VT323', monospace;
-                font-size: 75px;
-                background-color: #f21e31;
-                color: #ddbf14;
-                font-style: normal;
-                font-weight: normal;
-                border: 6px solid black;
-                border-radius: 30px;
-                box-shadow: 0px 60px 60px rgba(0, 0, 0, 0.25);
-                -webkit-text-stroke: 3px black;
-                z-index: 4;
             }
-            
-            .pixelart {
-                image-rendering: pixelated;
-              }
-            
             .guyLeft {
-              display: flex;
-              height: 150px;  
-              width: 202.5px;
-                overflow: hidden;
-                position: absolute;
-                top: 36%; 
-                left: 15%;
-                z-index: 4;
-              }
+                top: 18%; 
+                left: -5%;
               
-              .guyLeft__spritesheet {
-                height: 150px; 
-                width: 810px;
-                z-index: 4;
-                animation: moveSpritesheet 1s steps(4) infinite;
               }
-            
               .enemy {
-                display: flex;
-                height: 144px;
-                width: 139.5px;
-                position: absolute;
-                top: 38%;
-                left: 67%;
-                z-index: 8;
-                overflow: hidden;
-               animation: danger 3s infinite linear;
+                top: 18%;
+                left: 50%;
               }
-              .enemy__spritesheet{
-                height: 144px;
-                width: 1728px;
-                z-index: 8;
-                animation: moveEnemySpritesheet 1s steps(6) infinite;
-              }
-            
-              @keyframes moveEnemySpritesheet {
-                from {
-                  transform: translate3d(0px,0,0)
-                }
-                to {
-              transform: translate3d(-100%,0,0);
-                }
-              }
-            
-                  @keyframes moveSpritesheet {
-                    from {
-                      transform: translate3d(0px, 0, 0);
-                    }
-                    to {
-                      transform: translate3d(-100%, 0, 0);
-                    }
-                  }  
-                 }  
 
-
-
-                 @media only screen and (max-width: 500px) { 
-                  * {
-                  margin: 0;
-                  padding: 0;
-                  }
-                  
-                  body {
-                    height: 100vh;
-                    width: 100vw;
-                    font-family: 'VT323', monospace;
-                      font-size: 50px;
-                      background-color: rgba(14, 14, 49, 0.733);
-                      color: #ddbf14;
-                      display: flex;
-                      justify-content: center;
-                      align-items: center;
-                      flex-direction: column;
-                  }
-                  .background {
-                    height: 100vh;
-                    width: 100vw;
-                    z-index: -1;
-                  }
-                  .clouds {
-                    position:absolute;
-                    height: 100vh;
-                    width: 100vw;
-                    z-index: 0;
-                  }
-                  .bg1 {
-                    position: absolute;
-                    height: 100vh;
-                    width: 100vw;
-                    z-index: 1;
-                  }
-                  .bg2 {
-                    position: absolute;
-                    height: 100vh;
-                    width: 100vw;
-                    z-index: 2;
-                  }
-                  .bg3 {
-                    position: absolute;
-                    height: 100vh;
-                    width: 100vw;
-                    z-index: 3;
-                  }
-                  .welcome{
-                    display: flex;
-                    position: absolute;
-                   justify-content: center;
-                   top: 10%;
-                     /* width: 100vw;
-                    height: 100vh;  */
-                       -webkit-text-stroke: 1px black;
-                      z-index: 4;
-                      font-size: 1em;
-                      margin: 0;
-                      padding: 0;
-                      margin-block-start: 0;
-                      margin-block-end: 0;
-                      margin-inline-start: 0;
-                      margin-inline-end: 0;
-                  }
-                  
-                  
-                  
-                  .start {
-                    position: absolute;
-                    top: 50; 
-                    left: 50;
-                    padding: 20px;
-                      font-family: 'VT323', monospace;
-                      font-size: 75px;
-                      background-color: #f21e31;
-                      color: #ddbf14;
-                      font-style: normal;
-                      font-weight: normal;
-                      border: 6px solid black;
-                      border-radius: 30px;
-                      box-shadow: 0px 60px 60px rgba(0, 0, 0, 0.25);
-                      -webkit-text-stroke: 3px black;
-                      z-index: 4;
-                  }
-                  
-                  .pixelart {
-                      image-rendering: pixelated;
-                    }
-                  
-                  .guyLeft {
-                    display: flex;
-                    height: 150px;  
-                    width: 202.5px;
-                      overflow: hidden;
-                      position: absolute;
-                      top: 36%; 
-                      left: -5%;
-                      z-index: 4;
-                    }
-                    
-                    .guyLeft__spritesheet {
-                      height: 150px; 
-                      width: 810px;
-                      z-index: 4;
-                      animation: moveSpritesheet 1s steps(4) infinite;
-                    }
-                  
-                    .enemy {
-                      display: flex;
-                      height: 144px;
-                      width: 139.5px;
-                      position: absolute;
-                      top: 38%;
-                      left: 67%;
-                      z-index: 8;
-                      overflow: hidden;
-                     animation: danger 3s infinite linear;
-                    }
-                    .enemy__spritesheet{
-                      height: 144px;
-                      width: 1728px;
-                      z-index: 8;
-                      animation: moveEnemySpritesheet 1s steps(6) infinite;
-                    }
-                  
-                    @keyframes moveEnemySpritesheet {
-                      from {
-                        transform: translate3d(0px,0,0)
-                      }
-                      to {
-                    transform: translate3d(-100%,0,0);
-                      }
-                    }
-                  
-                        @keyframes moveSpritesheet {
-                          from {
-                            transform: translate3d(0px, 0, 0);
-                          }
-                          to {
-                            transform: translate3d(-100%, 0, 0);
-                          }
-                        }  
-                       }  
+                 } 
                  
